--- a/style.css
+++ b/style.css
@@ -1,12 +1,68 @@
 html{
-    font-family: Arial;
+    font-family: "Roboto", sans-serif;
 }
 body{
     padding: 1%;
 }
+.initialtext{
+	font-size: x-large;
+}
+.bannertext{
+	position: relative;
+	left: 2%;
+	padding-top: 2%;
+}
+hr{
+	color: #B3A369;
+	background-color: #B3A369;
+	height: 10px;
+	width: 100%;
+}
+
+/* Table rules */
 table, th, td{
     border:2px solid black;
+    table-layout : fixed;
+    width: 100%;
 }
+.styled-table {
+    border-collapse: collapse;
+    margin: 25px 0;
+    font-size: 0.9em;
+    font-family: sans-serif;
+    min-width: 400px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+}
+.styled-table thead tr {
+    background-color: #B3A369;
+    color: #ffffff;
+    text-align: left;
+}
+.styled-table th,
+.styled-table td {
+    padding: 12px 15px;
+}
+.styled-table tbody tr {
+    border-bottom: 1px solid #dddddd;
+}
+
+.styled-table tbody tr:nth-of-type(even) {
+    background-color: #f3f3f3;
+}
+.styled-table tbody tr:last-of-type {
+    border-bottom: 2px solid #009879;
+}
+.styled-table tbody tr.active-row {
+    font-weight: bold;
+    color: #009879;
+}
+/* Ppadding for mobile devices  */
 td{
     padding:4px;
+}
+.schedule td{
+	width: 33.3%;
+}
+.assignment td{
+	width: 33.3%;
 }
