--- a/style.css
+++ b/style.css
@@ -19,8 +19,6 @@ hr{
 	height: 10px;
 	width: 100%;
 }
-
-/* Table rules */
 table, th, td{
     border:2px solid black;
     table-layout : fixed;
@@ -41,7 +39,8 @@ table, th, td{
 }
 .styled-table th,
 .styled-table td {
-    padding: 12px 15px;
+    padding: 0.5em 0.5em;
+    vertical-align: top;
 }
 .styled-table tbody tr {
     border-bottom: 1px solid #dddddd;
@@ -57,20 +56,13 @@ table, th, td{
     font-weight: bold;
     color: #009879;
 }
-td{
-    padding:4px;	/* Mobile device padding */
-    vertical-align: top;
-}
-.schedule td{
-	width: 33.3%;
-}
-.assignment td{
-	width: 33.3%;
-}
 ul{
-  padding-left:2px;
-  margin-top: -2px;
+  padding-left: 0.5em;
+  margin-top: -0.03em;
+}
+.whead li{
+	margin-left: 0.5em;
 }
 li{
-  padding-left:-2px;
+  padding-left:0px;
 }
