--- a/style.css
+++ b/style.css
@@ -1,17 +1,25 @@
+*{
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
 html{
+	color: #000;
     font-family: "Roboto", sans-serif;
+    font-size: 16px;
 }
 body{
-    padding: 1%;
+	padding: 1em 1em;
+    min-height: 100vh;
+    width: 100%;
 }
 .initialtext{
-	/*font-size: x-large;*/
 	font-size: 1.3em;
 }
 .bannertext{
 	position: relative;
-	left: 2%;
-	padding-top: 2%;
+	/*left: 2%;*/
+	padding-top: 3%;
 }
 hr{
 	color: #B3A369;
@@ -19,18 +27,21 @@ hr{
 	height: 10px;
 	width: 100%;
 }
+section{
+	margin-top: 1em;
+}
 table, th, td{
     border:2px solid black;
+    font-size: 0.9em;
     table-layout : fixed;
     width: 100%;
 }
 .styled-table {
     border-collapse: collapse;
-    margin: 25px 0;
-    font-size: 0.9em;
     font-family: sans-serif;
-    min-width: 400px;
+    min-width: 375px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+    width: 100%;
 }
 .styled-table thead tr {
     background-color: #B3A369;
@@ -64,5 +75,6 @@ ul{
 	margin-left: 0.5em;
 }
 li{
-  padding-left:0px;
+  padding-left: -1em;
+  text-indent: -0.5em;
 }
